fixed z-index on top icon

--- a/public/assets/css/stylesheet_all.css
+++ b/public/assets/css/stylesheet_all.css
@@ -870,7 +870,7 @@ footer.content-scroll-wrapper{
 
 #navToTop{
     position: fixed;
-    z-index: 10;
+    z-index: 1000;
     bottom: 0;
     right: 0;
     margin: 1.5rem;
